<resources>
    <string name="app_name">MyRun4</string>
    <string name="MAP_API_KEY">AIzaSyAHeIUBDXSBrYz6LwaogjvfXlBcBrt7BZo</string>
    <string name="profile_photo_file_name">profile_image</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">START</string>
    <string name="tab_text_2">HISTORY</string>
    <string name="tab_text_3">SETTINGS</string>
    <string name="settings_account">Account Preferences</string>
    <string name="settings_user_profile">Name, Email, Class, etc</string>
    <string name="settings_user_profile_description">User Profile</string>
    <string name="settings_privacy">Privacy Setting</string>
    <string name="settings_privacy_description">Posting your records anonymously</string>
    <string name="settings_additional">Additional Settings</string>
    <string name="settings_unit_preference">Unit Preference</string>
    <string name="settings_unit_preference_description">Select the units</string>
    <string name="settings_comment">Comments</string>
    <string name="settings_comment_description">Please enter your comments</string>
    <string name="settings_misc">Misc.</string>
    <string name="settings_webpage">Webpage</string>
    <string name="settings_webpage_description">http://web.cs.dartmouth.edu/</string>
    <string name="comment_dialog_hint">How did it go? Notes here.</string>
    <string name="ui_profile_photo_picker_title">Pick Profile Picture</string>
    <string-array name="input_type_array">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>
    <string-array name="activity_type_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-Country Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Swimming</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Other</item>
    </string-array>
    <string-array name="manual_info_array">
        <item>Date</item>
        <item>Time</item>
        <item>Duration</item>
        <item>Distance</item>
        <item>Calories</item>
        <item>Heart rate</item>
        <item>Comment</item>
    </string-array>
    <string-array name="settings_unit_array">
        <item>Metric (Kilometers)</item>
        <item>Imperial (Miles)</item>
    </string-array>
    <string-array name="settings_unit_valeu_array">
        <item>Kilometers</item>
        <item>Miles</item>
    </string-array>
    <string-array name="ui_profile_photo_picker_items">
        <item>Open Camera</item>
        <item>Select from Gallery</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
